# python-LOOM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  __version__.py  backend_validation_report.json  codecov.yml  conftest.py  errors.py  pyproject.toml  setup.py  test_hardening.py  test_phase9_features.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: test-backends.yml
agent/: README.md  __init__.py  daemon.py
backend/: README.md  base.py  cuda_backend.py  numba_backend.py
benchmarks/: __init__.py  benchmark_suite.py
core/: README.md
doc/: agent_system_report.md
docs/: backends.md
field/: README.md  field_tensor.py
integrate/: README.md  quadrature.py
interpolate/: __init__.py  interpolate.py
io/: __init__.py
linalg/: basics.py  decompositions_merged.py  matfuncs.py  solvers.py
loom/: __init__.py  __version__.py  config.py  errors.py  logging.py
loom/agent/: README.md  orchestrator.py
loom/backend/: README.md  __init__.py  cpu.py  cython_backend.py  manager.py  numba_backend.py
loom/core/: README.md  __init__.py  dtype.py  shape.py  tensor.py
loom/field/: README.md  __init__.py  compression.py
loom/integrate/: README.md  __init__.py  ode.py
loom/interpolate/: README.md
loom/io/: README.md  serialize.py
loom/linalg/: README.md  __init__.py  decompositions.py  matfuncs.py  solvers.py
loom/numeric/: README.md  __init__.py  storage.py
loom/ops/: README.md  __init__.py  arithmetic.py  reduction.py
loom/optimize/: README.md  minimize.py  root.py
loom/random/: README.md
loom/signal/: README.md  convolution.py  filters.py  windows.py
loom/sparse/: README.md  __init__.py  ops.py
loom/spatial/: README.md  __init__.py  distance.py  (+2 more)
ops/: README.md  complex_ops.py  indexing.py  manipulation.py  matmul.py
optimize/: README.md  __init__.py
random/: __init__.py  rng.py
scripts/: validate_backends.py
signal/: __init__.py  fft.py
sparse/: sparse_matrix.py
spatial/: README.md
stats/: README.md  metrics.py  tests.py
symbolic/: ast.py  integrate.py  simplify.py
test_capabilities/: __init__.py  test_integrate_caps.py  test_optimize_caps.py  test_random_caps.py  test_sparse_caps.py  test_spatial_caps.py
test_core/: __init__.py  test_api.py
test_field/: test_field.py
test_linalg/: test_det_fixed.py  test_solvers.py
test_ops/: test_arithmetic.py  test_manipulation.py  test_reduction.py
test_spatial/: test_spatial.py
test_special/: test_special.py
test_stats/: test_stats.py
test_symbolic/: test_calculus.py
tests/: __init__.py  conftest.py  test_hardening.py  test_memory_process.py
utils/: __init__.py
(+55 files in other folders)
