# Copyright 2025 Michael Maillet, Damien Davison, Sacha Davison
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
dynamic = ["version"]
description = "Native Python mathematical computing framework - replaces NumPy, SymPy, SciPy with zero dependencies"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "LOOM Contributors"}]
requires-python = ">=3.9"
dependencies = []  # ZERO external dependencies - this is a core design principle

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["tensor", "numpy", "sympy", "scipy", "scientific-computing", "symbolic-math"]

[project.optional-dependencies]
numba = ["numba>=0.57.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "sphinx>=5.0",
]
cython = ["cython>=0.29"]
cuda = ["cuda-python>=11.0"]
all = ["numba>=0.57.0", "pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/Symbo-gif/python-LOOM"
Repository = "https://github.com/Symbo-gif/python-LOOM"

[tool.setuptools.packages.find]
where = ["."]
include = ["loom*"]

[tool.setuptools.dynamic]
version = {attr = "loom.__version__.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true
strict_optional = true

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311", "py312"]
